tests/fixtures/invalid/primitive_typo_in_union.avsc
{
  "type": "record",
  "name": "TestUnionWithTypo",
  "fields": [
    {
      "name": "optional_value",
      "type": [
        "null",
        {
          "type": "doubl"
        }
      ]
    }
  ]
}
